# orderbook-aggregator

./: Cargo.toml  README.md  run-client.sh  run-server.sh
.cargo/: config.toml
client/: Cargo.toml  build.rs
client/src/: main.rs  print_summary_table.rs
server/: Cargo.toml
server/src/: helpers.rs  main.rs
server/src/api/: mod.rs
server/src/data_sources/: binance.rs  bitstamp.rs  mod.rs  output_data_format.rs
server/src/summary/: calculate.rs  mod.rs
src/: client.rs  server.rs
src/client/: main.rs
src/server/: main.rs
src/server/api/: mod.rs
src/server/data_sources/: binance.rs  bitstamp.rs  mod.rs  output_data_format.rs
src/server/summary/: calculate.rs  mod.rs
