[package]
name = "order-books-mixer"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.2"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tonic = "0.8.2"

[build-dependencies]
tonic-build = "0.8.2"
