[package]
name = "orderbook-aggregator-client"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.2"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.2"
comfy-table = "6.1.3"

[build-dependencies]
tonic-build = "0.8.2"
