[package]
name = "orderbook-aggregator-server"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tonic = "0.8.2"
tungstenite = { version = "0.17.3", features = ["rustls-tls-native-roots"] }
url = "2.3.1"

[build-dependencies]
tonic-build = "0.8.2"
